--- a/style.less
+++ b/style.less
@@ -97,13 +97,15 @@ h2.blurb {
 	box-sizing: border-box;
 	color: #999;
 
-	div {
+	div, a {
 		margin-top: 4px;
 		padding: 6px 0;
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		display: none;
+		text-decoration: none;
+		color: #999;
 
 		i {
 			width: 16px;
